tests/baselines/reference/sourceMapValidationExportAssignment(strict=true).errors.txt
sourceMapValidationExportAssignment.ts(2,12): error TS7008: Member 'c' implicitly has an 'any' type.


==== sourceMapValidationExportAssignment.ts (1 errors) ====
    class a {
        public c;
               ~
!!! error TS7008: Member 'c' implicitly has an 'any' type.
    }
    export = a;